Allow Exception Strings to be passed to RottonMelon Ctor, Implemented MelonInfoAttribute.SystemType Validation to prevent infinite loop during Melon Instantiation, Paranoid CETCompat Disable

--- a/Dependencies/CompatibilityLayers/Demeo/Demeo.csproj
+++ b/Dependencies/CompatibilityLayers/Demeo/Demeo.csproj
@@ -6,6 +6,7 @@
         <OutputPath>$(MLOutDir)/MelonLoader/Dependencies/CompatibilityLayers</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <DebugType>portable</DebugType>
+        <CETCompat>false</CETCompat>
     </PropertyGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\..\MelonLoader\MelonLoader.csproj" Private="false" />
