--- a/Dependencies/SupportModules/Il2Cpp/Il2Cpp.csproj
+++ b/Dependencies/SupportModules/Il2Cpp/Il2Cpp.csproj
@@ -9,6 +9,7 @@
         <DefineConstants>SM_Il2Cpp</DefineConstants>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <RestoreAdditionalProjectSources>https://nuget.bepinex.dev/v3/index.json</RestoreAdditionalProjectSources>
+        <CETCompat>false</CETCompat>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Il2Cppmscorlib">
