--- a/MelonLoader/MelonLoader.csproj
+++ b/MelonLoader/MelonLoader.csproj
@@ -16,6 +16,7 @@
         <RepositoryType>git</RepositoryType>
         <PackageProjectUrl>https://github.com/LavaGang/MelonLoader</PackageProjectUrl>
         <Description>The World's First Universal Mod Loader for Unity Games compatible with both Il2Cpp and Mono.</Description>
+        <CETCompat>false</CETCompat>
     </PropertyGroup>
     <ItemDefinitionGroup>
         <PackageReference>
