--- a/PortablePdbToMdb/PortablePdbToMdb.csproj
+++ b/PortablePdbToMdb/PortablePdbToMdb.csproj
@@ -7,6 +7,7 @@
         <PlatformTarget>AnyCpu</PlatformTarget>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <OutputPath>$(MSBuildProjectDirectory)/bin</OutputPath>
+        <CETCompat>false</CETCompat>
     </PropertyGroup>
 
     <ItemGroup>
