--- a/Dependencies/MelonStartScreen/MelonStartScreen.csproj
+++ b/Dependencies/MelonStartScreen/MelonStartScreen.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <TargetFrameworks>$(MonoTarget);$(DotNetTarget)</TargetFrameworks>
         <RootNamespace>MelonLoader.MelonStartScreen</RootNamespace>
-        <TargetFrameworks>net35;net6</TargetFrameworks>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <OutputPath>$(MLOutDir)/MelonLoader</OutputPath>
         <AppendTargetFrameworkToOutputPath>true</AppendTargetFrameworkToOutputPath>
