--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,15 @@
     <PropertyGroup>
         <Version>0.7.2</Version>
         <AppHostVersion>9.0.0</AppHostVersion>
+		
+		<BootstrapTarget>net9</BootstrapTarget>
+		
+        <DotNetTarget>net6</DotNetTarget>
+		
+        <MonoTarget>net35</MonoTarget>
+        <MonoBleedingEdgeTarget>net472</MonoBleedingEdgeTarget>
+		
+		<PortablePdbToMdbTarget>netstandard2.0</PortablePdbToMdbTarget>
 
         <Authors>Lava Gang</Authors>
         <Company>discord.gg/2Wn3N2P</Company>
@@ -16,6 +25,7 @@
         <Platforms>x86;x64</Platforms>
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
 	
 	<!--
