--- a/MelonLoader.NativeHost/MelonLoader.NativeHost.csproj
+++ b/MelonLoader.NativeHost/MelonLoader.NativeHost.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6</TargetFramework>
+        <TargetFramework>$(DotNetTarget)</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputPath>$(MLOutDir)/MelonLoader</OutputPath>
