--- a/Dependencies/CompatibilityLayers/IPA/IPA.csproj
+++ b/Dependencies/CompatibilityLayers/IPA/IPA.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <TargetFramework>$(MonoTarget)</TargetFramework>
         <RootNamespace>MelonLoader.CompatibilityLayers</RootNamespace>
-        <TargetFramework>net35</TargetFramework>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <OutputPath>$(MLOutDir)/MelonLoader/Dependencies/CompatibilityLayers</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
