--- a/Dependencies/SupportModules/Mono/Mono.csproj
+++ b/Dependencies/SupportModules/Mono/Mono.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <TargetFramework>$(MonoTarget)</TargetFramework>
         <RootNamespace>MelonLoader.Support</RootNamespace>
-        <TargetFramework>net35</TargetFramework>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <OutputPath>$(MLOutDir)/MelonLoader/Dependencies/SupportModules</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
