--- a/PortablePdbToMdb/PortablePdbToMdb.csproj
+++ b/PortablePdbToMdb/PortablePdbToMdb.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>$(PortablePdbToMdbTarget)</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <PlatformTarget>AnyCpu</PlatformTarget>
