--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,7 +26,10 @@
         <LangVersion>Latest</LangVersion>
         <IsPackable>false</IsPackable>
         <Configurations>Debug;Release</Configurations>
+		
         <Platforms>x86;x64</Platforms>
+        <RuntimeIdentifiers>win-x86;win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+		
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
@@ -61,28 +64,38 @@
         <MonoCecilVersion>0.10.4</MonoCecilVersion>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(ForceWindows)' != 'true' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">
-        <RuntimeIdentifiers>linux-x64</RuntimeIdentifiers>
-        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
-        <PlatformTarget>x64</PlatformTarget>
+	<!--
+		Platform Defaults
+	-->
+	<PropertyGroup Condition="'$(RuntimeIdentifier)' == '' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">
+		<RuntimeIdentifier>win-$(Platform)</RuntimeIdentifier>
+    </PropertyGroup>
+	
+	<PropertyGroup Condition="'$(RuntimeIdentifier)' == '' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">
+		<RuntimeIdentifier>linux-$(Platform)</RuntimeIdentifier>
+    </PropertyGroup>
+	
+	<PropertyGroup Condition="'$(RuntimeIdentifier)' == '' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">
+		<RuntimeIdentifier>osx-$(Platform)</RuntimeIdentifier>
+    </PropertyGroup>
+	
+	<!--
+		Platform Constants
+	-->
+    <PropertyGroup Condition="'$(RuntimeIdentifier.StartsWith(`linux-`))' == 'true'">
         <DefineConstants>$(DefineConstants);LINUX</DefineConstants>
         <LibPrefix>lib</LibPrefix>
         <LibExt>.a</LibExt>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">
+    <PropertyGroup Condition="'$(RuntimeIdentifier.StartsWith(`osx-`))' == 'true'">
         <!-- TODO: split x64 and arm64 -->
-        <RuntimeIdentifiers>osx-x64</RuntimeIdentifiers>
-        <RuntimeIdentifier>osx-x64</RuntimeIdentifier>
-        <PlatformTarget>x64</PlatformTarget>
         <DefineConstants>$(DefineConstants);OSX</DefineConstants>
         <LibPrefix>lib</LibPrefix>
         <LibExt>.a</LibExt>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(ForceWindows)' == 'true' OR '$([MSBuild]::IsOSUnixLike())' == 'false'">
-        <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
-        <RuntimeIdentifier>win-$(Platform)</RuntimeIdentifier>
+    <PropertyGroup Condition="'$(RuntimeIdentifier.StartsWith(`win-`))' == 'true'">
         <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
         <LibExt>.lib</LibExt>
     </PropertyGroup>
