--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -76,11 +76,13 @@
     </PropertyGroup>
 	
 	<PropertyGroup Condition="'$(RuntimeIdentifier)' == '' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">
-		<RuntimeIdentifier>linux-$(Platform)</RuntimeIdentifier>
+		<!-- <RuntimeIdentifier>linux-$(Platform)</RuntimeIdentifier> -->
+		<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
 	
 	<PropertyGroup Condition="'$(RuntimeIdentifier)' == '' And '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">
-		<RuntimeIdentifier>osx-$(Platform)</RuntimeIdentifier>
+		<!-- <RuntimeIdentifier>osx-$(Platform)</RuntimeIdentifier> -->
+		<RuntimeIdentifier>osx-x64</RuntimeIdentifier>
     </PropertyGroup>
 	
 	<!--
